# SimpleITK

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .hooks-config.bash  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CTestConfig.cmake  CTestCustom.cmake.in  DebugTest.cxx  NOTICE  Readme.md  SimpleITKConfig.cmake.in  SimpleITKConfigVersion.cmake.in  UseSimpleITK.cmake.in  Version.cmake  azure-pipelines.yml  azure.cmake  circle.yml  circleci.cmake  conf.py  dummy  git-gitlab-push  git-gitlab-sync  index.rst  pyproject.toml  readthedocs.yml  setup-lfs  simpleitk_common.cmake  sitkCheckForITKModuleDependencies.cmake  sitkConfigure.h.in  sitkGenerateSimpleITKConfig.cmake  vcpkg-configuration.json  vcpkg.json
Code/: CMakeLists.txt
Code/BasicFilters/: Abs.json  Acos.json  Add.json  Add.lua  And.json  Asin.json  Atan.json  Atan2.json  BinaryClosingByReconstruction.json  BinaryDilate.json  BinaryErode.json  BinaryFillhole.json  BinaryGrindPeak.json  BinaryMagnitude.json  BinaryMinMaxCurvatureFlow.json  BinaryMorphologicalClosing.json  BinaryMorphologicalOpening.json  BinaryOpeningByReconstruction.json  BinaryPruning.json  BinaryThinning.json  BinaryThreshold.in  BinaryThreshold.json  BinaryThreshold.lua  BlackTopHat.json  CMakeLists.txt  ClosingByReconstruction.json  ConnectedThreshold.json  ConnectedThreshold_RegionGrowing.json  Cos.json  CurvatureAnisotropicDiffusion.json  CurvatureFlow.in  CurvatureFlow.json  CurvatureFlow.lua  DilateObjectMorphology.json  Divide.json  DivideByConstant.json  DoubleThreshold.json  ErodeObjectMorphology.json  Exp.json  ExpNegative.json  (+102 more)
Code/CodeGeneration/: expand_template.cmake  generate_filter_source.cmake
Code/Common/: CMakeLists.txt  SimpleITK.h  SimpleITKMacro.h  itkLabelMapFacade.h  simpleExplicitInstantiations.cxx  simpleImage.cxx  simplePixelTypeLists.h  sitkDetail.h  sitkDualMemberFunctionFactory.h  sitkDualMemberFunctionFactory.txx  sitkEnableIf.h  sitkExceptionObject.h  sitkFilterBase.h  sitkImage.cxx  sitkImage.h  sitkImage.txx  sitkIndex.cxx  sitkIndex.h  sitkMacro.h  sitkMemberFunctionFactory.h  sitkMemberFunctionFactory.txx  sitkMemberFunctionFactoryBase.h  sitkNonCopyable.h  sitkPixelContainer.cxx  sitkPixelContainer.h  sitkPixelContainer.txx  sitkPixelIDTokens.h  sitkPixelIDTypeLists.h  sitkPixelIDTypes.h  sitkPixelIDValues.cxx  sitkPixelIDValues.h  sitkPixelTypeLists.h  sitkShow.cxx  sitkSize.cxx  sitkSize.h  sitkVersion.cxx.in  sitkVersion.h
Code/Display/: CMakeLists.txt  sitkShow.cxx
Code/ElastixTransformixWrappers/: CMakeLists.txt
Code/Explicit/: CMakeLists.txt
Code/IO/: CMakeLists.txt  simpleImageFileReader.h  simpleImageFileWriter.cxx  simpleImageFileWriter.h  sitkImageFileReader.cxx  sitkImageFileReader.h  sitkImageFileWriter.cxx  sitkImageFileWriter.h  sitkImageReaderBase.cxx  sitkImageReaderBase.h  sitkImageSeriesReader.cxx  sitkImageSeriesReader.h  sitkShow.cxx  sitkShow.h
Code/Registration/: CMakeLists.txt  sitkAffineTransform.cxx  sitkAffineTransform.h  sitkInterpolate.h  (+16 more)
Examples/: .flake8  .gitignore  Add.cxx  BinaryThreshold.cxx  BoarderSegmentation.py  BufferImportExport.cxx  CMakeLists.txt  CannyEdge.py  DeformableRegistration1.cxx  DeformableRegistration1.py  DemonsRegistration1.cxx  DemonsRegistration1.py  DemonsRegistration2.cxx  DemonsRegistration2.py  DicomSeriesReader.cxx  DicomSeriesReader2.py  ExtractSlice.py  FFTConvolution.py  FilterProgressReporting.R  FilterProgressReporting.cs  FilterProgressReporting.cxx  FilterProgressReporting.java  FilterProgressReporting.py  FilterProgressReporting.rb  GeodesicActiceContourSegmentation.py  ITKIntegration.cxx  ImageConnection.java  ImageCreateAndSet.py  ImageGetBuffer.cs  ImageRegistrationMethod1.cxx  ImageRegistrationMethod1.lua  ImageRegistrationMethod1.py  ImageRegistrationMethod2.cxx  ImageRegistrationMethod2.py  ImageRegistrationMethod3.py  ImageRegistrationMethod4.py  ImageRegistrationMethodBSpline1.cxx  ImageRegistrationMethodBSpline1.py  ImageRegistrationMethodBSpline2.py  ImageRegistrationMethodDisplacement1.cxx  (+21 more)
Source/: CMakeLists.txt  SimpleITK.h  SimpleITKMacro.h  simpleAddImage.cxx  simpleAddImage.h  simpleAffineRegistration.cxx  simpleAffineRegistration.h  simpleCastImageFilter.cxx  simpleCastImageFilter.h  simpleGaussian.cxx  simpleGaussian.h  simpleITKDetail.h  simpleImage.cxx  simpleImage.h  simpleImageFileReader.cxx  simpleImageFileReader.h  simpleImageFileWriter.cxx  simpleImageFileWriter.h  simpleImageHash.cxx  simpleImageHash.h  simpleResample.cxx  simpleResample.h  simpleTransform.cxx  simpleTransform.h
SuperBuild/: .SuperBuild.cmake.swp  CMakeLists.txt  CTestConfig.cmake  External_Elastix.cmake  External_GTest.cmake  External_ITK.cmake  External_ITKExternalITKModule.cmake  External_ITKv4.cmake  External_ITKv4.cmake.orig  External_Lua.cmake  External_PCRE.cmake  External_PCRE2.cmake  External_SimpleITKExamples.cmake  External_Swig.cmake  External_TBB.cmake  External_virtualenv.cmake  SuperBuild.cmake  lua.cmake  pcre2_configure_step.cmake.in  pcre_configure_step.cmake.in  swig-r-api-r460.patch  swig_configure_step.cmake.in  swig_patch_step.cmake.in
Testing/: CMakeLists.txt
Utilities/: ApplyApacheLicense.sh  BuildDocs  CMakeLists.txt  CSVtoTable.py  CompareITKandSITKFilters.py  ExpandTemplate.lua  GenerateDocumentation.groovy  JSONInputAtoInputs.py  JSONValidate.py  ParseForExplicitInstantiation.py  SetupForDevelopment.sh  UpdateSwigFromDoxygen.sh  UploadBinaryData.py  UploadBinaryData.sh  filters.csv  generate_baselines.py
Wrapping/: AssemblyInfo.cs.in  CMakeLists.txt  CMakeLists.txt.orig  CSharp.i  CSharpTypemapHelper.i  FindR.cmake  HOW_TO_CONFIGURE_R_MODULE.txt  Java.i  JavaDoc.i  LoadSimpleITK.R.in  LoadSimpleITK.java.in  Lua.i  Python.i  PythonDocstrings.i  PythonVirtualEnvInstall.cmake.in  R.i  README.txt  Ruby.i  SimpleITK.h  SimpleITK.i  SimpleITK.i.orig  SimpleITKLuaMain.cxx  SimpleITKNumpyPatch.cmake.in  SimpleITKNumpyPatch.py  Tcl.i  UseSWIGLocal.cmake  makeSimpleITKRData.R.in  sitkNumpyArrayConversion.cxx  sitkPyCommand.cxx  sitkPyCommand.h
(+3299 files in other folders)
